# cabal-audit

./: .envrc  .hlint.yaml  README.md  cabal-audit.cabal  cabal.project  cabal.project.freeze  flake.nix
.github/workflows/: cabal-audit.yml  check-regen-nix.yml  haskell-ci.yml  security.yml  update-lock-file.yml
nix/: cabal-audit.nix  cvss.nix  haskell-overlay.nix  haskell-shell.nix  hsec-core.nix  hsec-sync.nix  hsec-tools.nix  osv.nix  purl.nix  static.nix  toml-parser.nix
src/Control/Effect/: Pretty.hs
src/Distribution/: Audit.hs
src/Distribution/Audit/: Parser.hs
src/Effect/: Pretty.hs
src/Security/Advisories/: Cabal.hs
src/Security/Advisories/SBom/: Cabal.hs  CycloneDX.hs  Types.hs
test/: Spec.hs
test/assets/sarif-location/comment-before-real/: comment-before-real.cabal
test/assets/sarif-location/freeze-only/: cabal.project.freeze  freeze-only.cabal
test/assets/sarif-location/multi-package/: a.cabal  b.cabal
test/assets/sarif-location/no-match/: transitive-only.cabal
test/assets/sarif-location/project-only/: cabal.project  project-only.cabal
test/assets/sarif-location/single-package/: myTool.cabal
test/assets/sarif-location/subsubstring/: subsubstring.cabal
test/assets/test-cabal-project/: flake.nix
test/assets/test-ghc-tools-issue-project/: cabal.project  ghc-tool-fixture.cabal
test/assets/test-ghc-tools-issue-project/src/: Dummy.hs
